resources/applications/hello-world-development/namespaces.yaml
# Each namespace stand for a subsystem, project, application running on the cluster
---
kind: Namespace
apiVersion: v1
metadata:
  name: saas-portal-dev
  labels:
    name: saas-portal-dev
