resources/applications/hello-world-development/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  namespace: saas-portal-dev
spec:
  replicas: 10
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=Hello, World from Development"
          ports:
            - containerPort: 5678
---
